--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,13 +15,14 @@
     .stats{
         @media screen and (min-width:700px) {
             order:2;
-            margin-top:-50px;
+            height: 50%;
+            justify-content: center;
         }
-        @media screen and (min-width:500px) {
+        @media screen and (min-width:430px) {
             margin-bottom: 50px;
         }
         display: flex;
-        height: 28%;
+        height: 34%;
         width: 100%;
         margin-bottom: 20px;
         text-align: center;
@@ -43,7 +44,7 @@
             @media screen and (min-width:700px) {
                 font-size:50px;
             }
-            @media screen and (min-width:500px) {
+            @media screen and (min-width:370px) {
                 font-size:50px;
                 margin-bottom: 5px;
             }
